--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,12 +44,16 @@
               <span [style.color]="lancamento.tipo === 'DESPESA' ? 'red' : 'blue'">{{lancamento.valor}} </span>
             </td>
             <td class="col-acoes">
-              <a pButton icon="pi pi-pencil"></a>
-              <button pButton icon="pi pi-trash"></button>
+              <a pButton icon="pi pi-pencil" pTooltip="Editar" tooltipPosition="top" ></a>
+              <button pButton icon="pi pi-trash" pTooltip="Excluir" tooltipPosition="top"></button>
             </td>
           </tr>
         </ng-template>
       </p-table>
+    </div>
+
+    <div class="ui-g-12">
+      <button pButton label="Novo Lançamento" ></button>
     </div>
   </div>
 </div>
