--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
+  color: #404C51;
 }
 
 label {
@@ -24,7 +25,6 @@ label {
 .col-data-header {
   width: 120px;
 }
-
 .col-data-content {
   text-align: center;
 }
