criando componente de pesquisa de pessoas

--- a/src/app/lancamentos-pesquisa/lancamentos-pesquisa.component.html
+++ b/src/app/lancamentos-pesquisa/lancamentos-pesquisa.component.html
@@ -31,7 +31,7 @@
             <th class="col-data-header">Vencimento</th>
             <th class="col-data-header">Pagamento</th>
             <th class="col-valor-header">Valor</th>
-            <th class="col-acoes"></th>
+            <th class="col-acoes-header"></th>
           </tr>
         </ng-template>
         <ng-template pTemplate="body" let-lancamento>
