--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
 <app-navbar></app-navbar>
+<!--
 <app-lancamentos-pesquisa></app-lancamentos-pesquisa>
+-->
+<app-pessoas-pesquisa></app-pessoas-pesquisa>
