--- a/src/app/lancamentos-pesquisa/lancamentos-pesquisa.component.html
+++ b/src/app/lancamentos-pesquisa/lancamentos-pesquisa.component.html
@@ -23,7 +23,7 @@
 
   <div class="ui-g">
     <div class="ui-g-12">
-      <p-table [value]="lancamentos" [paginator]="true" [rows]="2" pageLinks="3" [responsive]="true" >
+      <p-table [value]="lancamentos" [paginator]="true" [rows]="5" pageLinks="3" [responsive]="true" >
         <ng-template pTemplate="header">
           <tr>
             <th>Pessoa</th>
@@ -31,17 +31,19 @@
             <th class="col-data-header">Vencimento</th>
             <th class="col-data-header">Pagamento</th>
             <th class="col-valor-header">Valor</th>
-            <th class="col-acoes-header"></th>
+            <th class="col-acoes-header" ></th>
           </tr>
         </ng-template>
         <ng-template pTemplate="body" let-lancamento>
           <tr>
             <td>{{ lancamento.pessoa }}</td>
             <td>{{ lancamento.descricao }}</td>
-            <td class="col-data-content">{{ lancamento.dataVencimento }}</td>
-            <td class="col-data-content">{{ lancamento.dataPagamento }}</td>
+            <td class="col-data-content">{{ lancamento.dataVencimento | date: 'dd/MM/y' }}</td>
+            <td class="col-data-content">{{ lancamento.dataPagamento | date: 'dd/MM/y' }}</td>
             <td class="col-valor-content" >
-              <span [style.color]="lancamento.tipo === 'DESPESA' ? 'red' : 'blue'">{{lancamento.valor}} </span>
+              <span [style.color]="lancamento.tipo === 'DESPESA' ? 'red' : 'blue'">
+                {{lancamento.valor | currency: 'BRL'}}
+              </span>
             </td>
             <td class="col-acoes">
               <a pButton icon="pi pi-pencil" pTooltip="Editar" tooltipPosition="top" ></a>
