inicio do desenvolvimento da pagina de cadastro de lancamento

--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,14 @@ body {
   color: #404C51;
 }
 
+a {
+  color: #337ab7;
+}
+
+a:hover, a:focus {
+  text-decoration: underline;
+}
+
 label {
   font-weight: bold;
 }
