--- a/src/styles.css
+++ b/src/styles.css
@@ -43,7 +43,11 @@ label {
 .col-acoes {
   text-align: center;
 }
-
 .col-acoes > * {
   margin: 1px !important;
 }
+
+.ui-button, body .ui-button {
+  margin: 4px;
+}
+
