--- a/src/app/pessoa-cadastro/pessoa-cadastro.component.html
+++ b/src/app/pessoa-cadastro/pessoa-cadastro.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <form>
+  <form #f="ngForm" autocomplete="off">
     <div class="ui-g">
       <div class="ui-g-12">
         <h1>Nova Pessoa</h1>
@@ -7,43 +7,77 @@
 
       <div class="ui-g-12 ui-fluid">
         <label>Nome</label>
-        <input pInputText type="text">
+        <input pInputText type="text"
+          name="nome" ngModel #nome="ngModel"
+          required minlength="5" >
+
+        <app-message [control]="nome" error="required"
+          text="Informe um nome!"></app-message>
+        <app-message [control]="nome" error="minlength"
+          text="Mínimo de {{nome.errors?.minlength?.requiredLength}} caracteres."></app-message>
       </div>
 
       <div class="ui-g-12 ui-md-9 ui-fluid">
         <label>Logradouro</label>
-        <input pInputText type="text">
+        <input pInputText type="text"
+          name="logradouro" ngModel #logradouro="ngModel"
+          required >
+
+        <app-message [control]="logradouro" error="required"
+          text="Informe um logradouro!"></app-message>
       </div>
       <div class="ui-g-12 ui-md-3 ui-fluid">
         <label>Número</label>
-        <input pInputText type="text">
+        <input pInputText type="text"
+          name="numero" ngModel #numero="ngModel"
+          required >
+
+        <app-message [control]="numero" error="required"
+          text="Informe um numero!"></app-message>
       </div>
 
       <div class="ui-g-12 ui-md-4 ui-fluid">
         <label>Complemento</label>
-        <input pInputText type="text">
+        <input pInputText type="text"
+          name="complemento" ngModel #complemento="ngModel">
       </div>
       <div class="ui-g-12 ui-md-4 ui-fluid">
         <label>Bairro</label>
-        <input pInputText type="text">
+        <input pInputText type="text"
+          name="bairro" ngModel #bairro="ngModel"
+          required >
+        <app-message [control]="bairro" error="required"
+          text="Informe um bairro!"></app-message>
       </div>
       <div class="ui-g-12 ui-md-4 ui-fluid">
         <label>CEP</label>
-        <p-inputMask mask="99999-999"></p-inputMask>
+        <p-inputMask mask="99999-999"
+          name="cep" ngModel #cep="ngModel"
+          required ></p-inputMask>
+        <app-message [control]="cep" error="required"
+          text="Informe um cep!"></app-message>
       </div>
 
       <div class="ui-g-12 ui-md-6 ui-fluid">
         <label>Cidade</label>
-        <input pInputText type="text">
+        <input pInputText type="text"
+          name="cidade" ngModel #cidade="ngModel"
+          required >
+        <app-message [control]="cidade" error="required"
+          text="Informe uma cidade!"></app-message>
       </div>
       <div class="ui-g-12 ui-md-6 ui-fluid">
         <label>Estado</label>
-        <input pInputText type="text">
+        <input pInputText type="text"
+          name="estado" ngModel #estado="ngModel"
+          required >
+        <app-message [control]="estado" error="required"
+          text="Informe um estado!"></app-message>
       </div>
 
       <div class="ui-g-12">
-        <button pButton type="submit" label="Salvar" ></button>
-        <button pButton type="button" label="Novo" class="ui-button-info"></button>
+        <button pButton type="submit" label="Salvar" class="botaoApp" [disabled]="f.invalid" ></button>
+        <button pButton type="button" label="Novo" class="botaoApp ui-button-info"></button>
         <a href="javascript:;">Voltar para a pesquisa</a>
       </div>
     </div>
