--- a/src/app/lancamentos/lancamentos-grid/lancamentos-grid.component.html
+++ b/src/app/lancamentos/lancamentos-grid/lancamentos-grid.component.html
@@ -1,5 +1,5 @@
 <p-table [value]="lancamentos" [paginator]="true" [rows]="5" pageLinks="3" [responsive]="true" >
-  <ng-template pTemplate="header">
+  <ng-template pTemplate="header" >
     <tr>
       <th>Pessoa</th>
       <th>Descricao</th>
@@ -24,6 +24,13 @@
         <a pButton icon="pi pi-pencil" pTooltip="Editar" tooltipPosition="top" ></a>
         <button pButton icon="pi pi-trash" pTooltip="Excluir" tooltipPosition="top"></button>
       </td>
+    </tr>
+  </ng-template>
+  <ng-template pTemplate="emptymessage" let-columns>
+    <tr>
+        <td [attr.colspan]="6">
+          Nenhum lançamento encontrado.
+        </td>
     </tr>
   </ng-template>
 </p-table>
