lista de lancamentos e pessoas buscando da API

--- a/src/app/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
+++ b/src/app/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
@@ -1,22 +1,62 @@
 <div class="container">
   <div class="ui-g">
-    <div class="ui-g-12">
-      <h1>Pessoas</h1>
-    </div>
+    <form autocomplete="off" (ngSubmit)="pesquisar()" >
+      <div class="ui-g-12">
+        <h1>Pessoas</h1>
+      </div>
 
-    <div class="ui-g-12 ui-fluid">
-      <label for="descricao">Nome</label>
-      <input type="text" name="nome" id="nome" pInputText />
-    </div>
+      <div class="ui-g-12 ui-fluid">
+        <label for="descricao">Nome</label>
+        <input type="text" name="nome" id="nome" pInputText
+          [(ngModel)]="filtro.nome" />
+      </div>
 
-    <div class="ui-g-12">
-      <button pButton type="submit" label="Pesquisar"></button>
-    </div>
+      <div class="ui-g-12">
+        <button pButton type="submit" label="Pesquisar"></button>
+      </div>
+    </form>
   </div>
 
   <div class="ui-g">
     <div class="ui-g-12">
-      <app-pessoas-grid [pessoas]="pessoas" ></app-pessoas-grid>
+      <p-table [value]="pessoas" [responsive]="true" [paginator]="true"
+        [rows]="filtro.itensPorPagina" [lazy]="true" [totalRecords]="totalRegistros"
+        (onLazyLoad)="aoMudarPagina($event)" >
+        <ng-template pTemplate="header">
+          <tr>
+            <th>Nome</th>
+            <th>Cidade</th>
+            <th>Estado</th>
+            <th>Status</th>
+            <th class="col-acoes-header"></th>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-pessoa>
+          <tr>
+              <td>{{ pessoa.nome }}</td>
+              <td>{{ pessoa.cidade }}</td>
+              <td>{{ pessoa.estado }}</td>
+              <td>
+                <a href="javascript:;"
+                  [pTooltip]="pessoa.ativo ? 'Desativar' : 'Ativar'"
+                  tooltipPosition="top">
+                  {{pessoa.ativo ? 'Ativo' : 'Inativo'}}
+                </a>
+              </td>
+              <td class="col-acoes">
+                  <a pButton icon="pi pi-pencil" pTooltip="Editar" tooltipPosition="top" ></a>
+                  <button pButton icon="pi pi-trash" pTooltip="Excluir" tooltipPosition="top"></button>
+              </td>
+          </tr>
+          <ng-template pTemplate="emptymessage" let-columns>
+            <tr>
+                <td [attr.colspan]="5">
+                  Nenhuma pessoa encontrada.
+                </td>
+            </tr>
+          </ng-template>
+        </ng-template>
+      </p-table>
     </div>
 
     <div class="ui-g-12">
