--- a/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
+++ b/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
@@ -1,29 +1,76 @@
 <div class="container">
   <div class="ui-g">
-    <div class="ui-g-12">
-      <h1>Lançamentos</h1>
-    </div>
+    <form autocomplete="off" (ngSubmit)="pesquisar()" >
+      <div class="ui-g-12">
+        <h1>Lançamentos</h1>
+      </div>
 
-    <div class="ui-g-12 ui-fluid">
-      <label for="descricao">Descrição</label>
-      <input type="text" name="descricao" id="descricao" pInputText />
-    </div>
+      <div class="ui-g-12 ui-fluid">
+        <label for="descricao">Descrição</label>
+        <input type="text" name="descricao" id="descricao" pInputText
+          [(ngModel)]="filtro.descricao" />
+      </div>
 
-    <div class="ui-g-12">
-      <label style="display: block;">Vencimento</label>
-      <input type="text" pInputText />
-      <label>até</label>
-      <input type="text" pInputText />
-    </div>
+      <div class="ui-g-12">
+        <label style="display: block;">Vencimento</label>
 
-    <div class="ui-g-12">
-      <button pButton type="submit" label="Pesquisar"></button>
-    </div>
+        <p-calendar dateFormat="dd/mm/yy" [showIcon]="true"
+          name="dataVencimentoInicio" [(ngModel)]="filtro.dataVencimentoInicio"
+          [inputStyle]="{width: '95px'}" showButtonBar="true"></p-calendar>
+
+        <label style="margin-left: 3px; margin-right: 3px">até</label>
+
+        <p-calendar dateFormat="dd/mm/yy" [showIcon]="true"
+          name="dataVencimentoFim" [(ngModel)]="filtro.dataVencimentoFim"
+          [inputStyle]="{width: '95px'}" showButtonBar="true"></p-calendar>
+      </div>
+
+      <div class="ui-g-12">
+        <button pButton type="submit" label="Pesquisar"></button>
+      </div>
+    </form>
   </div>
 
   <div class="ui-g">
     <div class="ui-g-12">
-      <app-lancamentos-grid [lancamentos]="lancamentos"> </app-lancamentos-grid>
+      <p-table [value]="lancamentos" [paginator]="true" pageLinks="3" [responsive]="true"
+        [rows]="filtro.itensPorPagina" [lazy]="true" [totalRecords]="totalRegistros"
+        (onLazyLoad)="aoMudarPagina($event)" >
+        <ng-template pTemplate="header" >
+          <tr>
+            <th>Pessoa</th>
+            <th>Descricao</th>
+            <th class="col-data-header">Vencimento</th>
+            <th class="col-data-header">Pagamento</th>
+            <th class="col-valor-header">Valor</th>
+            <th class="col-acoes-header" ></th>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-lancamento>
+          <tr>
+            <td>{{ lancamento.pessoa }}</td>
+            <td>{{ lancamento.descricao }}</td>
+            <td class="col-data-content">{{ lancamento.dataVencimento | date: 'dd/MM/y' }}</td>
+            <td class="col-data-content">{{ lancamento.dataPagamento | date: 'dd/MM/y' }}</td>
+            <td class="col-valor-content" >
+              <span [style.color]="lancamento.tipo === 'DESPESA' ? 'red' : 'blue'">
+                {{lancamento.valor | currency: 'BRL'}}
+              </span>
+            </td>
+            <td class="col-acoes">
+              <a pButton icon="pi pi-pencil" pTooltip="Editar" tooltipPosition="top" ></a>
+              <button pButton icon="pi pi-trash" pTooltip="Excluir" tooltipPosition="top"></button>
+            </td>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="emptymessage" let-columns>
+          <tr>
+              <td [attr.colspan]="6">
+                Nenhum lançamento encontrado.
+              </td>
+          </tr>
+        </ng-template>
+      </p-table>
     </div>
 
     <div class="ui-g-12">
