--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,18 @@
 <app-navbar></app-navbar>
 
-<app-pessoas-pesquisa></app-pessoas-pesquisa>
+<app-lancamentos-pesquisa></app-lancamentos-pesquisa>
 
 <!--
-  <app-lancamentos-pesquisa></app-lancamentos-pesquisa>
+  <app-pessoas-pesquisa></app-pessoas-pesquisa>
   <app-pessoa-cadastro></app-pessoa-cadastro>
   <app-lancamento-cadastro></app-lancamento-cadastro>
 -->
+
+<p-toast position="bottom-right"></p-toast>
+
+<p-confirmDialog #confirmDialog header="Confirmação" icon="pi pi-question-circle">
+  <p-footer>
+    <button type="button" pButton icon="pi pi-check" label="Sim" (click)="confirmDialog.accept()"></button>
+    <button type="button" pButton icon="pi pi-times" label="Não" (click)="confirmDialog.reject()"></button>
+  </p-footer>
+</p-confirmDialog>
