--- a/src/app/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
+++ b/src/app/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
@@ -21,7 +21,7 @@
     <div class="ui-g-12">
       <p-table [value]="pessoas" [responsive]="true" [paginator]="true"
         [rows]="filtro.itensPorPagina" [lazy]="true" [totalRecords]="totalRegistros"
-        (onLazyLoad)="aoMudarPagina($event)" >
+        (onLazyLoad)="aoMudarPagina($event)" #tabela >
         <ng-template pTemplate="header">
           <tr>
             <th>Nome</th>
@@ -46,7 +46,7 @@
               <td class="col-acoes">
                   <a pButton icon="pi pi-pencil" pTooltip="Editar" tooltipPosition="top" ></a>
                   <button pButton icon="pi pi-trash" pTooltip="Excluir" tooltipPosition="top"
-                    ></button>
+                  (click)="confirmarExclusao(pessoa)"></button>
               </td>
           </tr>
           <ng-template pTemplate="emptymessage" let-columns>
