--- a/src/app/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
+++ b/src/app/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
@@ -34,10 +34,11 @@
         <ng-template pTemplate="body" let-pessoa>
           <tr>
               <td>{{ pessoa.nome }}</td>
-              <td>{{ pessoa.cidade }}</td>
-              <td>{{ pessoa.estado }}</td>
+              <td>{{ pessoa.endereco.cidade }}</td>
+              <td>{{ pessoa.endereco.siglaUf }}</td>
               <td>
                 <a href="javascript:;"
+                  (click)="mudarStatus(pessoa)"
                   [pTooltip]="pessoa.ativo ? 'Desativar' : 'Ativar'"
                   tooltipPosition="top">
                   {{pessoa.ativo ? 'Ativo' : 'Inativo'}}
