--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,6 @@
 <app-navbar></app-navbar>
 
-<app-pessoa-cadastro></app-pessoa-cadastro>
-
-<!--
-  <app-lancamento-cadastro></app-lancamento-cadastro>
-  <app-pessoas-pesquisa></app-pessoas-pesquisa>
-  <app-lancamentos-pesquisa></app-lancamentos-pesquisa>
--->
+<router-outlet></router-outlet>
 
 <p-toast position="bottom-right"></p-toast>
 
