--- a/src/app/pessoas/pessoa-cadastro/pessoa-cadastro.component.html
+++ b/src/app/pessoas/pessoa-cadastro/pessoa-cadastro.component.html
@@ -2,7 +2,7 @@
   <form #f="ngForm" autocomplete="off" (ngSubmit)="salvar(f)">
     <div class="ui-g">
       <div class="ui-g-12">
-        <h1>Nova Pessoa</h1>
+        <h1>{{ editando ? 'Edição de': 'Novo' }} Pessoa</h1>
       </div>
 
       <div class="ui-g-12 ui-fluid">
@@ -86,8 +86,12 @@
             <i class="pi pi-spinner pi-spin"></i>
           </span>
         </button>
-        <button pButton type="button" label="Novo" class="botaoApp ui-button-info" [disabled]="salvando"></button>
-        <a href="javascript:;">Voltar para a pesquisa</a>
+
+        <button pButton type="button" label="Novo"
+          class="botaoApp ui-button-info" [disabled]="salvando"
+          (click)="novo(f)" ></button>
+
+        <a routerLink="/pessoas">Voltar para a pesquisa</a>
       </div>
     </div>
   </form>
