--- a/src/app/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
+++ b/src/app/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
@@ -45,24 +45,26 @@
                 </a>
               </td>
               <td class="col-acoes">
-                  <a pButton icon="pi pi-pencil" pTooltip="Editar" tooltipPosition="top" ></a>
-                  <button pButton icon="pi pi-trash" pTooltip="Excluir" tooltipPosition="top"
+                <a pButton icon="pi pi-pencil" pTooltip="Editar" tooltipPosition="top"
+                  [routerLink]="['/pessoas', pessoa.codigo]" ></a>
+
+                <button pButton icon="pi pi-trash" pTooltip="Excluir" tooltipPosition="top"
                   (click)="confirmarExclusao(pessoa)"></button>
               </td>
           </tr>
-          <ng-template pTemplate="emptymessage" let-columns>
-            <tr>
-                <td [attr.colspan]="5">
-                  Nenhuma pessoa encontrada.
-                </td>
-            </tr>
-          </ng-template>
+        </ng-template>
+        <ng-template pTemplate="emptymessage" let-columns>
+          <tr>
+              <td [attr.colspan]="5">
+                Nenhuma pessoa encontrada.
+              </td>
+          </tr>
         </ng-template>
       </p-table>
     </div>
 
     <div class="ui-g-12">
-      <button pButton label="Nova Pessoa" ></button>
+      <a pButton label="Nova Pessoa" routerLink="/pessoas/novo" ></a>
     </div>
   </div>
 </div>
