--- a/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
+++ b/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
@@ -59,11 +59,13 @@
             </td>
             <td class="col-acoes">
               <a pButton icon="pi pi-pencil" pTooltip="Editar" tooltipPosition="top"
-                [routerLink]="['/lancamentos', lancamento.codigo]" >
+                [routerLink]="['/lancamentos', lancamento.codigo]"
+                *ngIf="temPermissao('ROLE_CADASTRAR_LANCAMENTO')" >
               </a>
 
               <button pButton icon="pi pi-trash" pTooltip="Excluir" tooltipPosition="top"
-                (click)="confirmarExclusao(lancamento)"></button>
+                (click)="confirmarExclusao(lancamento)"
+                [disabled]="!temPermissao('ROLE_REMOVER_LANCAMENTO')" ></button>
             </td>
           </tr>
         </ng-template>
@@ -78,7 +80,8 @@
     </div>
 
     <div class="ui-g-12">
-      <a pButton label="Novo Lançamento" routerLink="/lancamentos/novo" ></a>
+      <a pButton label="Novo Lançamento" routerLink="/lancamentos/novo"
+        *ngIf="temPermissao('ROLE_CADASTRAR_LANCAMENTO')" ></a>
     </div>
   </div>
 </div>
