--- a/src/app/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
+++ b/src/app/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
@@ -46,10 +46,12 @@
               </td>
               <td class="col-acoes">
                 <a pButton icon="pi pi-pencil" pTooltip="Editar" tooltipPosition="top"
-                  [routerLink]="['/pessoas', pessoa.codigo]" ></a>
+                  [routerLink]="['/pessoas', pessoa.codigo]"
+                  *ngIf="temPermissao('ROLE_CADASTRAR_PESSOA')" ></a>
 
                 <button pButton icon="pi pi-trash" pTooltip="Excluir" tooltipPosition="top"
-                  (click)="confirmarExclusao(pessoa)"></button>
+                  (click)="confirmarExclusao(pessoa)"
+                  [disabled]="!temPermissao('ROLE_EXCLUIR_PESSOA')" ></button>
               </td>
           </tr>
         </ng-template>
@@ -64,7 +66,8 @@
     </div>
 
     <div class="ui-g-12">
-      <a pButton label="Nova Pessoa" routerLink="/pessoas/novo" ></a>
+      <a pButton label="Nova Pessoa" routerLink="/pessoas/novo"
+        *ngIf="temPermissao('ROLE_CADASTRAR_PESSOA')" ></a>
     </div>
   </div>
 </div>
