--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -14,10 +14,19 @@
 
   <ul class="navbar-menu" [hidden]="!exibindoMenu">
     <li class="navbar-usuario">{{usuarioLogado}}</li>
+
     <li class="navbar-menuitem" routerLinkActive="ativo"
-      *ngIf="temPermissao('ROLE_PESQUISAR_LANCAMENTO')" ><a routerLink="/lancamentos">Lançamentos</a></li>
+      *ngIf="temPermissao('ROLE_PESQUISAR_LANCAMENTO')" >
+      <a routerLink="/lancamentos">Lançamentos</a>
+    </li>
+
     <li class="navbar-menuitem" routerLinkActive="ativo"
-      *ngIf="temPermissao('ROLE_PESQUISAR_PESSOA')" ><a routerLink="/pessoas">Pessoas</a></li>
-    <li class="navbar-menuitem"><a href="#">Logout</a></li>
+      *ngIf="temPermissao('ROLE_PESQUISAR_PESSOA')" >
+      <a routerLink="/pessoas">Pessoas</a>
+    </li>
+
+    <li class="navbar-menuitem">
+      <a (click)="logout()" >Logout</a>
+    </li>
   </ul>
 </nav>
