--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -17,12 +17,22 @@
 
     <li class="navbar-menuitem" routerLinkActive="ativo"
       *ngIf="temPermissao('ROLE_PESQUISAR_LANCAMENTO')" >
+      <a routerLink="/dashboard">Dashboard</a>
+    </li>
+
+    <li class="navbar-menuitem" routerLinkActive="ativo"
+      *ngIf="temPermissao('ROLE_PESQUISAR_LANCAMENTO')" >
       <a routerLink="/lancamentos">Lançamentos</a>
     </li>
 
     <li class="navbar-menuitem" routerLinkActive="ativo"
       *ngIf="temPermissao('ROLE_PESQUISAR_PESSOA')" >
       <a routerLink="/pessoas">Pessoas</a>
+    </li>
+
+    <li class="navbar-menuitem" routerLinkActive="ativo"
+      *ngIf="temPermissao('ROLE_PESQUISAR_LANCAMENTO')" >
+      <a routerLink="/relatorios/lancamentos">Relatório - Lançamentos por Pessoa</a>
     </li>
 
     <li class="navbar-menuitem">
