--- a/src/app/pessoas/pessoa-cadastro/pessoa-cadastro.component.html
+++ b/src/app/pessoas/pessoa-cadastro/pessoa-cadastro.component.html
@@ -81,6 +81,48 @@
       </div>
 
       <div class="ui-g-12">
+        <p-panel header="Contatos" >
+          <div class="ui-g">
+            <div class="ui-g-12">
+              <p-table [value]="pessoa.contatos" [responsive]="true" >
+                <ng-template pTemplate="header" >
+                  <tr>
+                    <th>Nome</th>
+                    <th>Email</th>
+                    <th>Telefone</th>
+                    <th class="col-acoes-header"></th>
+                  </tr>
+                </ng-template>
+
+                <ng-template pTemplate="body" let-contato>
+                  <tr>
+                    <td>{{ contato.nome }}</td>
+                    <td>{{ contato.email}}</td>
+                    <td>{{ contato.telefone }}</td>
+                    <td class="col-acoes">
+                      <button pButton icon="pi pi-pencil" type="button"
+                        pTooltip="Editar" tooltipPosition="top" ></button>
+
+                      <button pButton icon="pi pi-trash" type="button"
+                        pTooltip="Excluir" tooltipPosition="top" ></button>
+                    </td>
+                  </tr>
+                </ng-template >
+
+                <ng-template pTemplate="emptymessage">
+                  <tr>
+                      <td [attr.colspan]="4">
+                        Nenhum contato cadastrado.
+                      </td>
+                  </tr>
+                </ng-template>
+              </p-table>
+            </div>
+          </div>
+        </p-panel>
+      </div>
+
+      <div class="ui-g-12">
         <button pButton type="submit" label="Salvar" class="botaoApp" [disabled]="f.invalid || salvando" >
           <span [hidden]="!salvando">
             <i class="pi pi-spinner pi-spin"></i>
