--- a/src/app/pessoas/pessoa-contato/pessoa-contato.component.html
+++ b/src/app/pessoas/pessoa-contato/pessoa-contato.component.html
@@ -2,6 +2,12 @@
   <p-panel header="Contatos" >
     <div class="ui-g">
       <div class="ui-g-12">
+        <button pButton label="Novo" icon="pi pi-plus" type="button"
+          class="ui-button-secondary" (click)="prepararNovoContato()" >
+        </button>
+      </div>
+
+      <div class="ui-g-12">
         <p-table [value]="pessoa.contatos" [responsive]="true" >
           <ng-template pTemplate="header" >
             <tr>
