--- a/src/app/pessoas/pessoa-contato/pessoa-contato.component.html
+++ b/src/app/pessoas/pessoa-contato/pessoa-contato.component.html
@@ -45,3 +45,6 @@
     </div>
   </p-panel>
 </div>
+
+<app-pessoa-contato-cadastro [exibindoFormularioContato]="exibirFormularioContato" >
+</app-pessoa-contato-cadastro >
