--- a/src/app/pessoas/pessoa-contato-cadastro/pessoa-contato-cadastro.component.html
+++ b/src/app/pessoas/pessoa-contato-cadastro/pessoa-contato-cadastro.component.html
@@ -1,5 +1,5 @@
 <p-dialog header="Novo Contato" [(visible)]="exibindoFormularioContato" modal="modal" >
-  <form #formContato="ngForm" (ngSubmit)="salvarContato()" >
+  <form #formContato="ngForm" (ngSubmit)="confirmarContato(formContato)" >
     <div class="ui-g-12 ui-fluid">
       <label>Nome</label>
       <input pInputText type="text" name="nome" required
