--- a/src/app/pessoas/pessoa-contato/pessoa-contato.component.html
+++ b/src/app/pessoas/pessoa-contato/pessoa-contato.component.html
@@ -18,14 +18,15 @@
             </tr>
           </ng-template>
 
-          <ng-template pTemplate="body" let-contato>
+          <ng-template pTemplate="body" let-contato let-rowIndex="rowIndex">
             <tr>
               <td>{{ contato.nome }}</td>
               <td>{{ contato.email}}</td>
               <td>{{ contato.telefone }}</td>
               <td class="col-acoes">
                 <button pButton icon="pi pi-pencil" type="button"
-                  pTooltip="Editar" tooltipPosition="top" ></button>
+                  pTooltip="Editar" tooltipPosition="top"
+                  (click)="prepararEditarContato(contato, rowIndex)"></button>
 
                 <button pButton icon="pi pi-trash" type="button"
                   pTooltip="Excluir" tooltipPosition="top" ></button>
@@ -48,5 +49,7 @@
 
 <app-pessoa-contato-cadastro
   [exibindoFormularioContato]="exibirFormularioContato"
-  (novoContatoInserido)="receiveNovoContatoInserido($event)" >
+  [contato]="contato" [contatoIndex]="contatoIndex"
+  (changeContatoEvent)="receiveContato($event)"
+  (changeExibirFormularioContatoEvent)="receiveExibirFormularioContato($event)" >
 </app-pessoa-contato-cadastro >
