--- a/src/app/pessoas/pessoa-contato/pessoa-contato.component.html
+++ b/src/app/pessoas/pessoa-contato/pessoa-contato.component.html
@@ -29,7 +29,8 @@
                   (click)="prepararEditarContato(contato, rowIndex)"></button>
 
                 <button pButton icon="pi pi-trash" type="button"
-                  pTooltip="Excluir" tooltipPosition="top" ></button>
+                  pTooltip="Excluir" tooltipPosition="top"
+                  (click)="removerContato(rowIndex)" ></button>
               </td>
             </tr>
           </ng-template >
