Melhorando componente de contatos

--- a/src/app/pessoas/pessoa-cadastro/pessoa-cadastro.component.html
+++ b/src/app/pessoas/pessoa-cadastro/pessoa-cadastro.component.html
@@ -80,7 +80,7 @@
           text="Máximo de {{estado.errors?.maxlength?.requiredLength}} caracteres."></app-message>
       </div>
 
-      <app-pessoa-contato [pessoa]="pessoa" >
+      <app-pessoa-contato [contatos]="pessoa.contatos" >
       </app-pessoa-contato>
 
       <div class="ui-g-12">
