--- a/src/app/pessoas/pessoa-contato/pessoa-contato.component.html
+++ b/src/app/pessoas/pessoa-contato/pessoa-contato.component.html
@@ -8,7 +8,7 @@
       </div>
 
       <div class="ui-g-12">
-        <p-table [value]="pessoa.contatos" [responsive]="true" >
+        <p-table [value]="contatos" [responsive]="true" >
           <ng-template pTemplate="header" >
             <tr>
               <th>Nome</th>
