Tratando erro de upload

--- a/src/app/lancamentos/lancamento-cadastro/lancamento-cadastro.component.html
+++ b/src/app/lancamentos/lancamento-cadastro/lancamento-cadastro.component.html
@@ -70,7 +70,8 @@
       <div class="ui-g-offset-6 ui-g-6 ui-md-offset-10 ui-md-2 ui-fluid" *ngIf="!lancamento.anexo" >
         <p-fileUpload name="anexo" mode="basic" auto="true" maxFileSize="100000000"
           chooseLabel="Anexar" accept="image/*,application/*" [url]="urlUploadAnexo"
-          (onUpload)="aoTerminarUploadAnexo($event)" >
+          (onUpload)="aoTerminarUploadAnexo($event)"
+          (onError)="erroUpload($event)" >
         </p-fileUpload>
       </div>
 
