Utilizando componente ProgressSpinner

--- a/src/app/lancamentos/lancamento-cadastro/lancamento-cadastro.component.html
+++ b/src/app/lancamentos/lancamento-cadastro/lancamento-cadastro.component.html
@@ -69,13 +69,18 @@
 
       <div class="ui-g-offset-6 ui-g-6 ui-md-offset-10 ui-md-2 ui-fluid" *ngIf="!lancamento.anexo" >
         <p-fileUpload name="anexo" mode="basic" auto="true" maxFileSize="100000000"
-          chooseLabel="Anexar" accept="image/*,application/*" [url]="urlUploadAnexo"
+          chooseLabel="Anexar" accept="image/*,application/*"
+          [url]="urlUploadAnexo"
+          (onBeforeUpload)="antesUploadAnexo($event)"
           (onUpload)="aoTerminarUploadAnexo($event)"
-          (onError)="erroUpload($event)" >
+          (onError)="erroUpload($event)"
+          [hidden]="uploadEmAndamento" >
         </p-fileUpload>
+
+        <p-progressSpinner [hidden]="!uploadEmAndamento"  [style]="{ width: '25px', height: '25px' }"></p-progressSpinner>
       </div>
 
-      <div class="ui-g-12 ui-fluid">
+      <div class="ui-g-12 ui-fluid" *ngIf="lancamento.urlAnexo" dir="rtl">
         <a target="_blank" pTooltip="Baixar anexo" tooltipPosition="top"
           [href]="lancamento.urlAnexo" >{{nomeAnexo}}</a>
       </div>
