--- a/src/app/lancamentos/lancamento-cadastro/lancamento-cadastro.component.html
+++ b/src/app/lancamentos/lancamento-cadastro/lancamento-cadastro.component.html
@@ -86,14 +86,14 @@
       </div>
 
       <div class="ui-g-12">
-        <button pButton type="submit" label="Salvar" class="botaoApp" [disabled]="f.invalid || salvando" >
+        <button pButton type="submit" label="Salvar" class="botaoApp" [disabled]="f.invalid || salvando || uploadEmAndamento" >
           <span [hidden]="!salvando">
             <i class="pi pi-spinner pi-spin"></i>
           </span>
         </button>
 
         <button pButton type="button" label="Novo"
-          class="botaoApp ui-button-info" [disabled]="salvando"
+          class="botaoApp ui-button-info" [disabled]="salvando || uploadEmAndamento"
           (click)="novo(f)" ></button>
 
         <a routerLink="/lancamentos">Voltar para a pesquisa</a>
